Changelog
=========

1.40-dev - (unreleased)
-----------------------
 * Change: cleaned package of pylint violations [ichimdav #4140]
 * Change: use portal_type when looking for files in assessment [tiberich #4135]

1.39 - (2011-03-08)
-------------------
 * Bug fix: commented under IndicatorFactSheet content type the usage of
     "unique_specification_code" validator as it is not defined [ghicaale #4174]

1.38 - (2011-02-24)
-------------------
 * Bug fix: decode to unicode the Description for content types with autocomputed value [tiberich #4164]

1.37 - (2011-02-10)
-------------------
 * Bug fix: made IndicatorFactSheets use the same IArchetype2Surf adapter as Specifications [tiberich #3982]

1.36 - (2011-02-04)
-------------------
 * Change: Minor changes to the overviews links in portlet refs #4045 [demarant]

1.35 - (2011-02-02)
-------------------
 * Bug fix: adjusted the link to ims overview and made the portlet only available for authorised only (CMS) fixes #4045 [demarant]

1.34 - (2011-02-01)
-------------------
 * Feature: Included most of the metadata and info from the specification into the full view on assessment [demarant]
 * Feature: Show data source organisation before each dataset title in assessment view, fixes #4091 and refs #3452 [demarant]
 * Bug fix: fix rendering of provider urls in external data spec view [tiberich #4092]
 * Bug fix: redirect to @@edit_aggregated instead of edit_aggregated after title edit in indicator [tiberich]
 * Feature: link to @@ims_timeline and @@ims_overview from the readiness portlet [tiberich #4045]
 * Bug fix: show ims content with missing setcodes in @@ims_timeline [tiberich #4053]
 * Feature: added permalinks in indicator factsheet, specification and assessment index views [tiberich #3552]
 * Feature: added aggregated edit view for indicator fact sheets [tiberich #4068]
 * Feature: enabled portlet readiness for indicator fact sheets [tiberich #4068]

1.33 - (2011-01-14)
-------------------