@@ -260,7 +260,7 @@ class Assessment(ATFolder, ModalFieldEditableAware,
         convert = getToolByName(self, 'portal_transforms').convert
         text = convert('html_to_text', self.getKey_message()).getData()
         try:
-            text = text.decode('utf-8')
+            text = text.decode('utf-8', 'replace')
         except UnicodeDecodeError, err:
             logger.info(err)
         return text
